# lapisco-academy-file-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20240529135833_attachments.sql  20240703132246_create_attachments.sql
src/: database.rs  download.rs  error.rs  main.rs  upload.rs
src/database/: attachment.rs  mod.rs
src/models/: attachment.rs  mod.rs
src/routers/: download.rs  mod.rs  upload.rs
src/routers/attachments/: download.rs  information.rs  mod.rs  remove.rs  upload.rs
