[package]
name = "lapisco-academy-file-server"
version = "0.1.0"
authors = ["Arthur Damasceno <damascenoarthur653@gmail.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "io-util", "fs"]}
tokio-util = { version = "0.7.11", features = ["io-util"] }
