[package]
name = "lafs"
version = "0.1.0"
authors = ["Arthur Damasceno <damascenoarthur653@gmail.com>"]
edition = "2021"

[dependencies]
# Http Server
axum = { version = "0.7.5", features = ["multipart"] }

# Async
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "io-util", "fs"]}
tokio-util = { version = "0.7.11", features = ["io-util"] }

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }

# Utils
nanoid = "0.4.0"
serde = { version = "1.0.203", features = ["derive"] }
dotenv = "0.15.0"
thiserror = "1.0.61"
